--- a/languages/lang_ptbr.xml
+++ b/languages/lang_ptbr.xml
@@ -18,4 +18,20 @@
 		<item type="field2">Ajuda</item>
 		<item type="field2_content">Para navegar entre as páginas, use **cs-userla _NÚMERO\_DA\_PÁGINA_**</item>
 	</error>
+	<command name="usercount">
+		<item type="title">Quantidade de usuários</item>
+		<item type="help">Mostra a quantidade de usuários e bots no servidor</item>
+		<item type="field1_name">Usuários</item>
+		<item type="field2_name">Bots</item>
+	</command>
+	<command name="help">
+		<item type="title">Ajuda</item>
+		<item type="help">Ensina como utilizar cada comando</item>
+		<item type="prefix">cs-</item>
+		<item type="field1_name">Como usar os comandos</item>
+		<item type="field1_content">Para chamar os comandos do bot, digite o comando no em um canal de texto</item>
+		<item type="field2_name">userla _NÚMERO\_DA\_PÁGINA_</item>
+		<item type="field3_name">usercount</item>
+		<item type="field4_name">help</item>
+	</command>
 </language>
